sigar-sys/src/ffi.rs

extern "C" {
    pub fn sigar_cpu_info_list_get(
        sigar: *mut sigar_t,
        cpu_infos: *mut sigar_cpu_info_list_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_cpu_info_list_destroy(
        sigar: *mut sigar_t,
        cpu_infos: *mut sigar_cpu_info_list_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_uptime_t {
    pub uptime: f64,
}
#[test]
fn bindgen_test_layout_sigar_uptime_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_uptime_t>(),
        8usize,
        concat!("Size of: ", stringify!(sigar_uptime_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_uptime_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_uptime_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_uptime_t>())).uptime as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_uptime_t),
            "::",
            stringify!(uptime)
        )
    );
}
extern "C" {
    pub fn sigar_uptime_get(
        sigar: *mut sigar_t,
        uptime: *mut sigar_uptime_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_loadavg_t {
    pub loadavg: [f64; 3usize],
}
#[test]
fn bindgen_test_layout_sigar_loadavg_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_loadavg_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_loadavg_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_loadavg_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_loadavg_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_loadavg_t>())).loadavg as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_loadavg_t),
            "::",
            stringify!(loadavg)
        )
    );
}
extern "C" {
    pub fn sigar_loadavg_get(
        sigar: *mut sigar_t,
        loadavg: *mut sigar_loadavg_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_proc_list_t {
    pub number: ::std::os::raw::c_ulong,
    pub size: ::std::os::raw::c_ulong,
    pub data: *mut sigar_pid_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_list_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_list_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_proc_list_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_list_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_list_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_list_t>())).number as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_list_t),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_list_t>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_list_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_list_t>())).data as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_list_t),
            "::",
            stringify!(data)
        )
    );
}
impl Default for sigar_proc_list_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_resource_limit_t {
    pub cpu_cur: sigar_uint64_t,
    pub cpu_max: sigar_uint64_t,
    pub file_size_cur: sigar_uint64_t,
    pub file_size_max: sigar_uint64_t,
    pub pipe_size_cur: sigar_uint64_t,
    pub pipe_size_max: sigar_uint64_t,
    pub data_cur: sigar_uint64_t,
    pub data_max: sigar_uint64_t,
    pub stack_cur: sigar_uint64_t,
    pub stack_max: sigar_uint64_t,
    pub core_cur: sigar_uint64_t,
    pub core_max: sigar_uint64_t,
    pub memory_cur: sigar_uint64_t,
    pub memory_max: sigar_uint64_t,
    pub processes_cur: sigar_uint64_t,
    pub processes_max: sigar_uint64_t,
    pub open_files_cur: sigar_uint64_t,
    pub open_files_max: sigar_uint64_t,
    pub virtual_memory_cur: sigar_uint64_t,
    pub virtual_memory_max: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_resource_limit_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_resource_limit_t>(),
        160usize,
        concat!("Size of: ", stringify!(sigar_resource_limit_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_resource_limit_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_resource_limit_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).cpu_cur as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(cpu_cur)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).cpu_max as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(cpu_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).file_size_cur as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(file_size_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).file_size_max as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(file_size_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).pipe_size_cur as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(pipe_size_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).pipe_size_max as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(pipe_size_max)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).data_cur as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(data_cur)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).data_max as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(data_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).stack_cur as *const _ as usize
        },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(stack_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).stack_max as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(stack_max)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).core_cur as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(core_cur)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_resource_limit_t>())).core_max as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(core_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).memory_cur as *const _ as usize
        },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(memory_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).memory_max as *const _ as usize
        },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(memory_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).processes_cur as *const _ as usize
        },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(processes_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).processes_max as *const _ as usize
        },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(processes_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).open_files_cur as *const _ as usize
        },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(open_files_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).open_files_max as *const _ as usize
        },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(open_files_max)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).virtual_memory_cur as *const _
                as usize
        },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(virtual_memory_cur)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_resource_limit_t>())).virtual_memory_max as *const _
                as usize
        },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_resource_limit_t),
            "::",
            stringify!(virtual_memory_max)
        )
    );
}
extern "C" {
    pub fn sigar_resource_limit_get(
        sigar: *mut sigar_t,
        rlimit: *mut sigar_resource_limit_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_proc_list_get(
        sigar: *mut sigar_t,
        proclist: *mut sigar_proc_list_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_proc_list_destroy(
        sigar: *mut sigar_t,
        proclist: *mut sigar_proc_list_t,
    ) -> ::std::os::raw::c_int;
}
